<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_layout_height"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/movie_poster_bin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_image_height"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detail_layout_margin_med"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/movie_poster_mini"
                android:layout_width="@dimen/detail_mini_poster_width"
                android:layout_height="@dimen/detail_mini_poster_height"
                android:layout_marginTop="@dimen/detail_layout_margin_small"
                android:adjustViewBounds="true"
                android:contentDescription="@string/poster" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/detail_layout_margin_small"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title_bin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/movie_title"
                    android:text="@string/movie_title_placeholder"
                    android:textSize="@dimen/detail_text_size_big"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/movie_release_bin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_placeholder"
                    android:textSize="@dimen/detail_text_size_small"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/star32" />

                    <TextView
                        android:id="@+id/movie_average_bin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/voter_average_placeholder"
                        android:textAlignment="center"
                        android:textSize="@dimen/detail_text_size_big" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/detail_layout_margin_med"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_synopsis_bin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/detail_text_size_small" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>